Resolve some pointer flicker issues

--- a/assets/stylesheets/issue-todo-list.css
+++ b/assets/stylesheets/issue-todo-list.css
@@ -28,3 +28,7 @@
     border-radius: 2px;
     height: 1.5em;
 }
+
+.ui-tooltip{
+    width: min-content !Important;
+}
